# db_auto_interface

./: .gitignore  README_ПАКЕТ.txt  pyproject.toml  setup.py  БЫСТРЫЙ_СТАРТ_ПАКЕТ.txt  ГОТОВО.txt  ИНСТРУКЦИЯ_ПО_СБОРКЕ.txt  КАК_УСТАНОВИТЬ.txt  СТРУКТУРА_ПАКЕТА.txt
.github/workflows/: publish.yml
db_auto_interface/: __init__.py  themes_config.json
db_auto_interface.egg-info/: PKG-INFO  SOURCES.txt
