[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-auto-interface"
version = "1.0.0"
authors = [
  { name = "Your Name", email = "your-email@example.com" },
]
description = "Автоматический генератор desktop интерфейса для PostgreSQL БД"
readme = "README.md"
license = "MIT"
keywords = ["postgresql", "database", "gui", "auto-generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg2-binary>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/your-username/db_auto_interface"
