[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-auto-interface"
version = "2.0.0"
authors = [
  {name = "Your Name", email = "your-email@example.com"}
]
description = "Автоматический генератор desktop интерфейса для PostgreSQL БД"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["postgresql", "database", "gui", "tkinter", "interface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg2-binary>=2.9.0"
]

[project.scripts]
db-auto-interface = "db_auto_interface.ui.main_app:main"

[project.urls]
"Bug Reports" = "https://github.com/yourusername/db_auto_interface/issues"
"Source" = "https://github.com/yourusername/db_auto_interface"
"Documentation" = "https://github.com/yourusername/db_auto_interface#readme"
